--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,11 +65,12 @@
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^7.0.0",
+        "postcss-scss": "^4.0.4",
         "sass-loader": "^13.0.0",
         "style-loader": "^3.3.0",
         "stylelint": "^14.11.0",
-        "stylelint-config-css-modules": "^2.2.0",
-        "stylelint-config-standard": "^22.0.0",
+        "stylelint-config-css-modules": "^4.1.0",
+        "stylelint-config-standard": "^28.0.0",
         "typescript": "^4.4.2",
         "webpack": "5"
     }
