--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
         "dequal": "^2.0.2",
         "downshift": "^6.1.7",
         "framer-motion": "^6.3.5",
+        "is-dark-color": "^1.2.0",
         "next": "^12.1.6",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
         "react": "^18.0.0",
+        "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.6",
         "react-dom": "^18.0.0",
         "react-laag": "^2.0.4",
@@ -63,11 +65,12 @@
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^7.0.0",
+        "postcss-scss": "^4.0.4",
         "sass-loader": "^13.0.0",
         "style-loader": "^3.3.0",
-        "stylelint": "^13.13.1",
-        "stylelint-config-css-modules": "^2.2.0",
-        "stylelint-config-standard": "^22.0.0",
+        "stylelint": "^14.11.0",
+        "stylelint-config-css-modules": "^4.1.0",
+        "stylelint-config-standard": "^28.0.0",
         "typescript": "^4.4.2",
         "webpack": "5"
     }
