--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DUMMY_COMPILER=on
 SECRET_KEY=django-insecure-nm#!8%zhc0wwi#m_*l9l)=m*6gs4&o_^-e5b5vj*k05&yaqc1
 DATABASE_URL=sqlite:///dev.db
 API_BASE=http://127.0.0.1:8000/api
-USE_SANDBOX_JAIL=off
+USE_SANDBOX_JAIL=on
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 FRONTEND_USE_IMAGE_PROXY=true
