--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
         "@radix-ui/colors": "^0.1.8",
         "@react-hook/resize-observer": "^1.2.2",
         "@replit/codemirror-indentation-markers": "^6.1.0",
-        "@shopify/web-worker": "^5.0.1",
         "allotment": "^1.17.1",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
@@ -50,8 +49,7 @@
         "sharp": "^0.31.3",
         "swr": "^1.3.0",
         "use-debounce": "^8.0.1",
-        "use-persisted-state": "^0.3.3",
-        "webpack-virtual-modules": "^0.5.0"
+        "use-persisted-state": "^0.3.3"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
