--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,36 +7,37 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django-cors-headers = "^3.11.0"
-django-environ = "^0.8.1"
-django-filter = "^21.1"
-djangorestframework = "^3.13.1"
-mypy = "^0.931"
-psycopg2-binary = "^2.9.4"
-responses = "^0.18.0"
+django-cors-headers = "^3.14.0"
+django-environ = "^0.10.0"
+django-filter = "^23.2"
+djangorestframework = "^3.14.0"
+psycopg2-binary = "^2.9.6"
+responses = "^0.23.1"
 jwt = "^1.3.1"
-PyGithub = "^1.55"
+PyGithub = "^1.58.1"
 drf-extensions = "^0.7.1"
-tqdm = "^4.62.3"
-tzdata = "^2022.1"
-Pillow = "^9.2.0"
+tqdm = "^4.65.0"
+tzdata = "^2023.3"
+Pillow = "^9.5.0"
 html-json-forms = "^1.1.1"
 django-resized = "^1.0.2"
-django-cleanup = "^6.0.0"
+django-cleanup = "^7.0.0"
 m2c = {git="https://github.com/matt-kempster/m2c.git"}
 asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}
-sentry-sdk = "^1.14.0"
+sentry-sdk = "^1.21.1"
 django-session-timeout = "^0.1.0"
-django = "^4.1.7"
+django = "^4.2"
+requests = "^2.29.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-usort = "^1.0.1"
-django-stubs-ext = "^0.4.0"
-django-stubs = "1.9.0"
-djangorestframework-stubs = "^1.4.0"
-types-requests = "^2.27.15"
-parameterized = "^0.8.1"
+black = "^23.3.0"
+usort = "^1.0.6"
+django-stubs-ext = "^4.2.0"
+django-stubs = "^4.2.0"
+djangorestframework-stubs = "^3.14.0"
+types-requests = "^2.29.0.0"
+parameterized = "^0.9.0"
+mypy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
