--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,38 +29,38 @@
         "@react-hook/resize-observer": "^1.2.6",
         "@replit/codemirror-indentation-markers": "^6.5.3",
         "@replit/codemirror-vim": "^6.2.1",
-        "allotment": "^1.20.2",
+        "allotment": "^1.20.3",
         "ansi-to-react": "^6.1.6",
         "clsx": "^2.1.1",
         "codemirror": "^6.0.1",
         "dotenv": "^16.4.5",
         "downshift": "9.0.8",
         "fast-myers-diff": "^3.2.0",
-        "framer-motion": "^11.12.0",
+        "framer-motion": "12.0.0-alpha.1",
         "is-dark-color": "^1.2.0",
         "memoize-one": "^6.0.0",
-        "next": "14.2.20",
+        "next": "15.3.2",
         "next-plausible": "^3.12.4",
-        "react": "^18.3.1",
+        "react": "19.1.0",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.7",
         "react-date-object": "^2.1.9",
-        "react-dom": "^18.3.1",
+        "react-dom": "19.1.0",
         "react-laag": "^2.0.5",
-        "react-timeago": "^7.2.0",
+        "react-timeago": "^8.2.0",
         "react-virtualized-auto-sizer": "^1.0.24",
         "react-window": "^1.8.10",
         "sass": "^1.82.0",
-        "swr": "^2.2.5",
+        "swr": "^2.3.3",
         "use-debounce": "^10.0.4",
         "vscode-languageserver-protocol": "^3.17.5"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@next/bundle-analyzer": "14.2.20",
+        "@next/bundle-analyzer": "15.3.2",
         "@svgr/webpack": "^8.1.0",
-        "@types/react": "^18.3.1",
-        "@types/react-dom": "^18.3.1",
+        "@types/react": "^19.1.3",
+        "@types/react-dom": "^19.1.3",
         "@types/react-timeago": "^4.1.7",
         "@types/react-virtualized-auto-sizer": "^1.0.4",
         "@types/react-window": "^1.8.8",
@@ -75,7 +75,7 @@
         "sass-loader": "^14.1.1",
         "style-loader": "^3.3.4",
         "tailwindcss": "^3.4.16",
-        "typescript": "^5.7.2",
+        "typescript": "^5.8.3",
         "umd-compat-loader": "^2.1.2",
         "webpack": "^5.97.1"
     },
